// Copyright 2025 Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package agntcy.identity.core.v1alpha1;

import "agntcy/identity/core/v1alpha1/jwk.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/agntcy/identity/api/server/agntcy/identity/core/v1alpha1;identity_core_sdk_go";

// ResolverMetadata represents a set of data describing the ID including mechanisms such as:
//   - cryptographic public keys - used to authenticate itself and prove
//     association with the ID
//   - service - ways of communicating with the node that published the document
//
// A ResolverMetadata can be retrieved by resolving an ID.
message ResolverMetadata {
  // The ID
  // The metadata below is related as claims to the ID
  optional string id = 1;

  // VerificationMethod is a list of cryptographic public keys, which can be used
  // to authenticate or authorize interactions with the entities represented by the ID.
  repeated VerificationMethod verification_method = 2;

  // Service is used in ResolverMetadatas to express ways of communicating with
  // the node that published the document.
  repeated Service service = 3;

  // AssertionMethod is used to specify how the entity represented by the ID
  // is expected to express claims, such as for the purposes of issuing a VCs.
  repeated string assertion_method = 4;

  // A controller is an entity that is authorized to make changes to a Resolver Metadata.
  optional string controller = 5;
}

// Service is used in ResolverMetadata to express ways of communicating with
// the node that published the document.
message Service {
  // ServiceEndpoint is a network address, such as an HTTP URL, of the
  // node.
  repeated string service_endpoint = 1;
}

// VerificationMethod expresses verification methods, such as cryptographic
// public keys, which can be used to authenticate or authorize interactions
// with the entities represented by the ID. It is a part of the ResolverMetadata.
message VerificationMethod {
  // A unique id of the verification method.
  optional string id = 1;

  // The public key used for the verification method.
  optional .agntcy.identity.core.v1alpha1.Jwk public_key_jwk = 2;
}
